--- a/task2/index.html
+++ b/task2/index.html
@@ -97,9 +97,9 @@
   </div>
 
 
-  <div class="row">
-  <div class="col-lg-3 TealBack gridcontent">
-    <img src="assets/images/icon_bag.png">
+  <div class="row ">
+  <div class="col-lg-3 TealBack gridcontent ">
+    <img src="assets/images/icon_bag.png" class="clientpic">
       <div class="imgCaption">
         <h2 class="montserrat bold-font fontWhite">548</h2>
           <p class="fontWhite montserrat caption">
@@ -109,7 +109,7 @@
   </div>
 
      <div class="col-lg-3 TealBack">
-      <img src="assets/images/icon_clock.png">
+      <img src="assets/images/icon_clock.png" class="clientpic" >
       <div class="imgCaption">
         <h2 class="montserrat bold-font fontWhite">1465</h2>
           <p class="fontWhite montserrat caption">
@@ -120,7 +120,7 @@
 
 
     <div class="col-lg-3 TealBack">
-      <img src="assets/images/icon_heart.png">
+      <img src="assets/images/icon_heart.png" class="clientpic">
       <div class="imgCaption">
        <h2 class=" montserrat bold-font fontWhite">612</h2>
           <p class="fontWhite montserrat caption">
@@ -130,7 +130,7 @@
     </div>
 
       <div class="col-lg-3 TealBack">
-        <img src="assets/images/icon_bag.png">
+        <img src="assets/images/icon_bag.png" class="clientpic">
         <div class="imgCaption">
          <h2 class="montserrat bold-font fontWhite">735</h2>
           <p class="fontWhite montserrat caption">
@@ -199,6 +199,126 @@ src="https://www.youtube.com/embed/0BxybZVLPGk" frameborder="0" allow="accelerom
 </iframe>
 
 </div>
+
+  <div class="grid-container text-center">
+      <div class="row">
+        <div class="col-lg-3">
+          <img src="assets/images/icon_01.png" class="">
+          <p class="bold-font montserrat">UI / UX DESIGN</p>
+          <p class="nunito line17">Be set fourth land god darkness
+          <br>make it wherein own</p>
+        </div>
+        <div class="col-lg-3 ">
+          <img src="assets/images/icon_02.png" class="">
+           <p class="bold-font montserrat ">WEB DEVELOPMENT</p>
+          <p class="nunito line17">A she'd them bring void moving 
+          <br>third she'd kind fill</p>
+        </div>
+        <div class="col-lg-3">
+          <img src="assets/images/icon_03.png" class="">
+           <p class="bold-font montserrat">APP MOBILE</p>
+          <p class="nunito line17">Dominion man second spirit he
+          <br>earth they're creeping</p>
+        </div>
+        <div class="col-lg-3">
+          <img src="assets/images/icon_04.png" class="">
+           <p class="bold-font montserrat">GAME  DESIGN</p>
+          <p class="nunito line17">Morning his saying moveth it
+          <br>multiply appear life be</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-3">
+           <img src="assets/images/icon_05.png" class="">
+          <p class="bold-font montserrat">SEO / MARKETING</p>
+          <p class="nunito line17">Give won't after land fill creeping
+          <br>meat you, may</p>
+        </div>
+        <div class="col-lg-3 ">
+           <img src="assets/images/icon_06.png" class="">
+          <p class="bold-font montserrat">PHOTOGRAPHY</p>
+          <p class="nunito line17">Creepeth one seas cattle grass
+          <br>give moving saw give</p>
+        </div>
+        <div class="col-lg-3">
+           <img src="assets/images/icon_07.png" class="">
+          <p class="bold-font montserrat">GRAPHIC DESIGN</p>
+          <p class="nunito line17">Open, great whales air rule for,
+          <br>fourth life whales</p>
+        </div>
+        <div class="col-lg-3">
+           <img src="assets/images/icon_08.png" class="">
+          <p class="bold-font montserrat">ILLUSTRATION</p>
+          <p class="nunito line17">Whales likeness hath, man kind
+          <br>for them air two won't</p>
+        </div>
+      </div>
+  </div>
+
+  <div class="testimoni TealBack text-center montserrat bold-font textBig fontWhite line17">
+
+
+     <div class="quote"><i class="fa fa-quote-left fa-4x"></i></div>
+        <div class="carousel slide" id="fade-quote-carousel" data-ride="carousel" data-interval="3000">
+          <!-- Carousel indicators -->
+          <ol class="carousel-indicators">
+            <li data-target="#fade-quote-carousel" data-slide-to="0" class="active"></li>
+            <li data-target="#fade-quote-carousel" data-slide-to="1"></li>
+            <li data-target="#fade-quote-carousel" data-slide-to="2"> </li>
+          </ol>
+          <!-- Carousel items -->
+          <div class="carousel-inner">
+            <div class="active item">
+              <blockquote>
+                               <p>"Outstanding job and exceeded all expectations. It was a pleasure<br>
+                to work with them on a sizable first project and am looking<br>
+                forward to start the next one asap."</p>
+                <p class="author montserrat fontWhite">
+                  Michael Hopkins
+                </p>
+              </blockquote>
+            </div>
+            <div class="item">
+              <blockquote>
+                <p>"Tak Gendong Kemana-mana<br>
+                    Enak toh <br>
+                    Mantep toh" 
+                </p>
+                <p class="author montserrat fontWhite">
+                  Mbah Surip
+                </p>
+              </blockquote>
+            </div>
+            <div class="item">
+              <blockquote>
+                <p>"3 Permen Milkita sama dengan segelas susu"</p>
+                <p class="author montserrat fontWhite">
+                  Alay Twitter
+                </p>
+              </blockquote>
+            </div>
+                    
+                   
+          </div>
+        </div>
+
+
+  </div>
+
+
+  <div class="container-fluid clientLogo text-center">
+ <div class="row">
+    <div class="col-md-2 col-md-offset-1"><img src="assets/images/part_01.png"></div>
+    <div class="col-md-2"><img src="assets/images/part_02.png"></div>
+    <div class="col-md-2"><img src="assets/images/part_03.png"></div>
+    <div class="col-md-2"><img src="assets/images/part_04.png"></div>
+    <div class="col-md-2"><img src="assets/images/part_05.png"></div>
+</div>
+  </div>
+
+
+
+
 
 </div>
 
