--- a/task2/index.html
+++ b/task2/index.html
@@ -144,16 +144,16 @@
 
       <div class="row">
         <div class="col-lg-3">
-          <img src="assets/images/tokopedia.png" class="clientpic">
+          <img src="assets/images/tokopedia.png" class="clientpic eyefocus">
         </div>
         <div class="col-lg-3 ">
-          <img src="assets/images/shopee 1.png" class="clientpic">
+          <img src="assets/images/shopee 1.png" class="clientpic eyefocus">
         </div>
         <div class="col-lg-3">
-          <img src="assets/images/bukalapak-dark.png" class="clientpic">
+          <img src="assets/images/bukalapak-dark.png" class="clientpic eyefocus">
         </div>
         <div class="col-lg-3">
-          <img src="assets/images/lazada.png" class="clientpic">
+          <img src="assets/images/lazada.png" class="clientpic eyefocus">
         </div>
       </div>
 
@@ -317,6 +317,99 @@ src="https://www.youtube.com/embed/0BxybZVLPGk" frameborder="0" allow="accelerom
   </div>
 
 
+  <div class="form">
+    <div class="text-center montserrat bold-font headerText">
+      Need a Project?
+          </div>
+      <div class="text-center nunito-med mt-40 line17"> 
+          Let us know what you're looking for in an agency. We'll take a look and see<br> 
+          if this could be the start of something beautiful.
+      </div>
+
+      <form class="text-center">
+  <div class="form-row form-input">
+    <div class="form-group col-md-6" >
+      <input type="email" class="form-control formEmail height48" id="inputEmail4" placeholder="Your Name">
+    </div>
+    <div class="form-group col-md-6 noRight">
+      <input type="email" class="form-control formEmail height48" id="inputPassword4" placeholder="Your email">
+    </div>
+  </div>
+  <div class="form-group">
+    <input type="text" class="form-control height48" id="inputAddress" placeholder="Your Title">
+  </div>
+  <div class="form-group">
+  <textarea class="form-control" rows="5" id="comment" placeholder="Your Comment"></textarea>
+  </div>
+
+
+  <button type="submit" class="btn montserrat textBig TealBack bold-font">SEND MESSAGE</button>
+</form>
+  </div>
+
+
+<div class="footer BlackBack"> 
+    <div class="container-fluid ">
+        <div class="row">
+            <div class="col-lg-6">
+              <div class="row">
+                <div class="col-lg-6"> 
+                    <div class="montserrat  fontWhite bold-font" > 
+                        <p> Piroll Design, inc</p>
+                    </div>
+                    <div class="nunito fontWhite">
+                        <p> 
+                            © 2017 Piroll. All rights reserved. <br>
+                            Designed by robirurk.
+                        </p> 
+                    </div>
+                </div>
+                <div class="col-lg-6"> 
+                    <div class="nunito fontWhite">
+                        <p> 
+                            hello@pirolltheme.com<br>
+                            +44 987 065 908
+                        </p> 
+                    </div>
+                </div>
+              </div>
+            </div>
+
+
+          <div class="col-lg-6"> 
+            <div class="row"> 
+                <div class="col-lg-2"> 
+                  <p class="fontWhite nunito eyefocus "  > 
+                    Projects <br> 
+                    About <br>  
+                    Services <br> 
+                    Career <br> 
+                  </p>
+                </div>
+                <div class="col-lg-5"> 
+                    <p class="fontWhite nunito eyefocus" > 
+                    News <br> 
+                    Events <br>  
+                    Contact <br> 
+                    Legals <br> 
+                  </p>
+                </div>
+                <div class="col-lg-5"> 
+                    <p class="fontWhite nunito eyefocus" > 
+                    Facebook <br> 
+                    Twitter <br>  
+                    Instagram <br> 
+                    Dribble <br> 
+                  </p>
+                </div>
+            </div>
+          </div>
+        </div> 
+
+
+    </div>
+
+</div>
 
 
 
