--- a/task2/index.html
+++ b/task2/index.html
@@ -176,7 +176,7 @@
 
 
       <div class="text-center workBelt TealBack">
-        <div class="montserrat bold-font textBig fontWhite">
+        <div class="montserrat bold-font textBig fontWhite eyefocus">
           <p>LOAD MORE WORK</p>
         </div>
 
