--- a/task03/index.html
+++ b/task03/index.html
@@ -392,7 +392,7 @@
                       SHARE WITH LOVE
                                         </div>
                     <div class="footer-caption raleway text-center">
-                      <img src="assets/images/icon.jpg">
+                      <a href=""><img src="assets/images/icon.jpg"></a>
                     </div>
 
                 </div>
