--- a/task03/index.html
+++ b/task03/index.html
@@ -116,7 +116,7 @@
     </div>
 
 
-       <div class="photo-grid">
+       <div class="photo-grid clearfix">
       <div class="row photo-row">
        <div class=" cont-grid">
         <span></span>
