--- a/task03/index.html
+++ b/task03/index.html
@@ -27,19 +27,19 @@
   					<div class="collapse navbar-collapse navbar-right" id="navbarNavDropdown">
     					<ul class="navbar-nav ">
       					<li class="nav-item active">
-        					<a class="nav-link" href="#">FEATURES <span class="sr-only">(current)</span></a>
+        					<a class="nav-link" href="#feature">FEATURES <span class="sr-only">(current)</span></a>
       					</li>
       					<li class="nav-item ">
-        					<a class="nav-link" href="#">WORKS</a>
+        					<a class="nav-link" href="#works">WORKS</a>
       					</li>
       					<li class="nav-item   ">
-        					<a class="nav-link" href="#">OUR TEAM</a>
+        					<a class="nav-link" href="#team">OUR TEAM</a>
       					</li>
       					<li class="nav-item ">
-        					<a class="nav-link" href="#">TESTIMONIALS</a>
+        					<a class="nav-link" href="#testimonials">TESTIMONIALS</a>
       					</li>
       					<li class="nav-item ">
-        					<a class="nav-link" href="#">DOWNLOAD</a>
+        					<a class="nav-link" href="#download">DOWNLOAD</a>
       					</li>
     					</ul>
   					</div>
@@ -65,7 +65,7 @@
   	</div>
 
 
-    <div class="container-custom icon-content text-center">
+    <div class="container-custom icon-content text-center" id="feature">
       <div class="row">
         <div class="col-icon-grid icon-grid">
           <img src="assets/images/pencil.gif">
@@ -116,7 +116,7 @@
     </div>
 
 
-       <div class="photo-grid clearfix">
+       <div class="photo-grid clearfix" id="works">
       <div class="row photo-row">
        <div class=" cont-grid">
         <span></span>
@@ -235,7 +235,7 @@
 
 
 
-    <div class="container-custom profile-grid text-center  col-sm-12 ">
+    <div class="container-custom profile-grid text-center  col-sm-12 " id="team">
       <div class="row bottom-row-icon">
         <div class="col-4-grid mr-30 profile-div">
           <img src="assets/images/team 1.jpg">
@@ -304,17 +304,17 @@
       </div>
     </div>
 
-        <div class="slider-grid row">
+        <div class="slider-grid row" id="testimonials">
       <div class="col-lg-6 col-md-12 col-sm-12 slider-image">
         <img src="assets/images/clients.jpg">
       </div>
 
       <div class="col-lg-6 col-md-12 col-sm-12 slider ">
         <div class="row">
-            <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
+             <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1" class=""></li>
+      <li data-target="#myCarousel" data-slide-to="2" class=""></li>
     </ol>
           <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Carousel indicators -->
@@ -353,7 +353,7 @@
 
         </div>
 
-        <div class="container-custom">
+        <div class="container-custom" id="download">
           <div class="row">
             <div class="bottom-text">
               <div class="text-center">
