--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                                 <!-- CAROUSEL -->
                             
                                 <!-- Tabbing -->
-                                <div class="col-lg-3 sp-none">
+                                <div class="col-lg-3 col-md-4 sp-none">
                                 <div class="d-flex align-items-start">
                                     <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                                       <button class="nav-link active" id="v-pills-2018-tab" data-bs-toggle="pill" data-bs-target="#v-pills-2018" type="button" role="tab" aria-controls="v-pills-2018" aria-selected="true">2018</button>
@@ -282,7 +282,7 @@
                                     </div>
                                 </div>
                                 </div>
-                                <div class="col-lg-9 sp-none">
+                                <div class="col-lg-9 col-md-8 sp-none">
                                     <div class="tab-content" id="v-pills-tabContent">
                                       <div class="tab-pane fade show active" id="v-pills-2018" role="tabpanel" aria-labelledby="v-pills-2018-tab">
                                             <img src="/img/tab-content1.png" class="img-def" alt="">
@@ -414,7 +414,7 @@
                                         </div>
                                         <div class="col-lg-6 col-md-6">
                                             <div class="card-2">
-                                                <img class="img-def" src="/img/card-img-2.png" alt="">
+                                                <img class="img-def" src="//img/card-img-2.png" alt="">
                                                 <span class="card-arrow"><img src="/img/circle-arrow.png" alt=""></span>
                                             </div>
                                             <div class="card-caption">
