--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                                         </div>
                                         <div class="col-lg-6 col-md-6">
                                             <div class="card-2">
-                                                <img class="img-def" src="//img/card-img-2.png" alt="">
+                                                <img class="img-def" src="/img/card-img-2.png" alt="">
                                                 <span class="card-arrow"><img src="/img/circle-arrow.png" alt=""></span>
                                             </div>
                                             <div class="card-caption">
