--- a/textrecognition/index.html
+++ b/textrecognition/index.html
@@ -71,7 +71,7 @@
 
 <body>
     <main>
-        <h1 class="title">Text to speech Converter</p>
+        <h1 class="title">Text to speech Converter<br>by: @edwinsdjah</p>
             <div class="text-section">
                 <p class="text-title">Enter Text</p>
                 <textarea name="" id="text"></textarea>
