--- a/janken/index.html
+++ b/janken/index.html
@@ -6,18 +6,19 @@
     <title>JANKEN</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="../janken/css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
   </head>
   <body>
-    <h1>JANKEN SUWIT</h1>
+    <h1><img src="../janken/img/title.png" alt=""></h1>
     <section class="option">
         <div class="container">
             <h2 class="text-center">PILIH GAME SET</h2>
             <div class="row">
                 <div class="col-lg-12">
                     <div class="d-flex row">
-                        <a href="javascript:void(0)" class="col-lg-4 col-md-4 opt3 text-center">3</a>
-                        <a href="javascript:void(0)" class="col-lg-4 col-md-4 opt5 text-center">5</a>
-                        <a href="javascript:void(0)" class="col-lg-4 col-md-4 opt7 text-center">7</a>
+                        <a href="javascript:void(0)" id="3" class="choice col-lg-4 col-md-4 opt3 text-center"><img src="../janken/img/star3.png" alt=""></a>
+                        <a href="javascript:void(0)" id="5" class="choice col-lg-4 col-md-4 opt5 text-center"><img src="../janken/img/star5.png" alt=""></a>
+                        <a href="javascript:void(0)" id="7" class="choice col-lg-4 col-md-4 opt7 text-center"><img src="../janken/img/star7.png" alt=""></a>
                     </div>
                 </div>
             </div>
