--- a/janken/index.html
+++ b/janken/index.html
@@ -57,11 +57,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-6 text-center">
-                    <a href="javascript:void(0)" class="restart">MAIN LAGI?</a>
-                </div>
-                <div class="col-lg-6 text-center">
-                    <a href="javascript:void(0)" class="quit">KELUAR</a>
+                <div class="col-lg-12 text-center">
+                    <a href="javascript:void(0)" class="restart"><button type="button" class="btn btn-warning">RESTART</button</a>
                 </div>
             </div>
         </div>
