--- a/famili-100/index.html
+++ b/famili-100/index.html
@@ -10,25 +10,49 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../famili-100/css/style.css">
-    <title>Hello, world!</title>
+    <link href="http://fonts.cdnfonts.com/css/triumvirate-cg-comp" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
+    <title>FAMILY 100</title>
 </head>
 
 <body>
     <h1>FAMILY 100</h1>
     <section>
-        <div class="option">
+        <div class="optionMenu show">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
+                        <div class="row optionRow">
+                            <div class="col-lg-4 text-center">
+                                <a href="javascript:void(0)" id="easy" class="option">
+                                    <p>EASY</p>
+                                </a>
+                            </div>
+                            <div class="col-lg-4 text-center">
+                                <a href="javascript:void(0)" id="medium" class="option">
+                                    <p>MEDIUM</p>
+                                </a>
+                            </div>
+                            <div class="col-lg-4 text-center">
+                                <a href="javascript:void(0)" id="hard" class="option">
+                                    <p>HARD</p>
+                                </a>
+                            </div>
+                        </div>
                         <div class="row">
-                            <div class="col-lg-4 text-center">
-                                <p>EASY</p>
-                            </div>
-                            <div class="col-lg-4 text-center">
-                                <p>MEDIUM</p>
-                            </div>
-                            <div class="col-lg-4 text-center">
-                                <p>HARD</p>
+                            <div class="col-lg-12 playMusic d-flex justify-content-end">
+                                <p>Music</p>
+                                <button type="button" class="btn btn-primary play">
+                                    <svg class="ico-play show" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                        class="bi bi-play" viewBox="0 0 16 16">
+                                        <path
+                                            d="M10.804 8 5 4.633v6.734L10.804 8zm.792-.696a.802.802 0 0 1 0 1.392l-6.363 3.692C4.713 12.69 4 12.345 4 11.692V4.308c0-.653.713-.998 1.233-.696l6.363 3.692z">
+                                        </path>
+                                    </svg>
+                                    <svg class="ico-pause" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pause" viewBox="0 0 16 16">
+                                        <path d="M6 3.5a.5.5 0 0 1 .5.5v8a.5.5 0 0 1-1 0V4a.5.5 0 0 1 .5-.5zm4 0a.5.5 0 0 1 .5.5v8a.5.5 0 0 1-1 0V4a.5.5 0 0 1 .5-.5z"/>
+                                      </svg>
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -66,15 +90,11 @@
                                             <td class="answer"></td>
                                             <td class="score"></td>
                                         </tr>
-                                        <tr>
-                                            <td class="answer"></td>
-                                            <td class="score"></td>
-                                        </tr>
                                     <tbody>
                                 </table>
                                 <div class="row answer">
                                     <div class="col-lg-4">
-                                        <p>JAWABAN</p>
+                                        <p>KETIK JAWABAN KAMU<br>DAN TEKAN ENTER</p>
                                     </div>
                                     <div class="col-lg-8">
                                         <input class="player" style="text-transform: uppercase;" type="text" name=""
@@ -106,11 +126,26 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="over">
+            <div class="container text-center">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h2>GAME OVER</h2>
+                        <p class="message"></p>
+                        <button type="button" class="btn btn-warning restart heartbeat">MAIN LAGI?</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="../famili-100/js/question.js"></script>
     <script src="../famili-100/js/script.js"></script>
+    <script src="../famili-100/js/sound.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
     </script>
