--- a/famili-100/index.html
+++ b/famili-100/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../famili-100/css/style.css">
-    <link href="http://fonts.cdnfonts.com/css/triumvirate-cg-comp" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/triumvirate-cg-comp" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
     <title>FAMILY 100</title>
 </head>
@@ -102,7 +102,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-3 sidebar">
+                            <div class="col-lg-3 sidebar sp-none">
                                 <div class="container timer">
                                     <p>TIMER</p>
                                     <p class="content"></p>
