--- a/famili-100/index.html
+++ b/famili-100/index.html
@@ -66,7 +66,7 @@
                 <div class="row">
                     <div class="col-lg-12 content">
                         <div class="row">
-                            <div class="col-lg-9">
+                            <div class="col-lg-9 main-content">
                                 <p class="question text-center"></p>
                                 <table class="demo">
                                     <tbody>
