--- a/famili-100/index.html
+++ b/famili-100/index.html
@@ -19,7 +19,7 @@
     <h1>FAMILY 100</h1>
     <section>
         <div class="optionMenu show">
-            <div class="container">
+            <div class="container mainCol">
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="row optionRow">
@@ -64,7 +64,7 @@
         <div class="main">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12 content">
+                    <div class="col-lg-12 mainCol">
                         <div class="row">
                             <div class="col-lg-9 main-content">
                                 <p class="question text-center"></p>
@@ -102,7 +102,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-3 sidebar sp-none">
+                            <div class="col-lg-3 sidebar sp-none text-center">
                                 <div class="container timer">
                                     <p>TIMER</p>
                                     <p class="content"></p>
@@ -130,7 +130,7 @@
         <div class="over">
             <div class="container text-center">
                 <div class="row">
-                    <div class="col-lg-12">
+                    <div class="col-lg-12 mainCol">
                         <h2>GAME OVER</h2>
                         <p class="message"></p>
                         <button type="button" class="btn btn-warning restart heartbeat">MAIN LAGI?</button>
