--- a/famili-100/index.html
+++ b/famili-100/index.html
@@ -43,15 +43,17 @@
                             <div class="col-lg-12 playMusic d-flex justify-content-end">
                                 <p>Music</p>
                                 <button type="button" class="btn btn-primary play">
-                                    <svg class="ico-play show" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                        class="bi bi-play" viewBox="0 0 16 16">
+                                    <svg class="ico-play show" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                        fill="currentColor" class="bi bi-play" viewBox="0 0 16 16">
                                         <path
                                             d="M10.804 8 5 4.633v6.734L10.804 8zm.792-.696a.802.802 0 0 1 0 1.392l-6.363 3.692C4.713 12.69 4 12.345 4 11.692V4.308c0-.653.713-.998 1.233-.696l6.363 3.692z">
                                         </path>
                                     </svg>
-                                    <svg class="ico-pause" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pause" viewBox="0 0 16 16">
-                                        <path d="M6 3.5a.5.5 0 0 1 .5.5v8a.5.5 0 0 1-1 0V4a.5.5 0 0 1 .5-.5zm4 0a.5.5 0 0 1 .5.5v8a.5.5 0 0 1-1 0V4a.5.5 0 0 1 .5-.5z"/>
-                                      </svg>
+                                    <svg class="ico-pause" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                        fill="currentColor" class="bi bi-pause" viewBox="0 0 16 16">
+                                        <path
+                                            d="M6 3.5a.5.5 0 0 1 .5.5v8a.5.5 0 0 1-1 0V4a.5.5 0 0 1 .5-.5zm4 0a.5.5 0 0 1 .5.5v8a.5.5 0 0 1-1 0V4a.5.5 0 0 1 .5-.5z" />
+                                    </svg>
                                 </button>
                             </div>
                         </div>
@@ -63,6 +65,30 @@
     <section>
         <div class="main">
             <div class="container">
+                <div class="row sp-show">
+                    <div class="col-12">
+                        <div class="row">
+                            <div class="col-3">
+                                <div class="container">
+                                    <p>NYAWA</p>
+                                    <p class="life"></p>
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="container timer">
+                                    <p>TIMER</p>
+                                    <p class="content"></p>
+                                </div>
+                            </div>
+                            <div class="col-3">
+                                <div class="container">
+                                    <p>SKOR</p>
+                                    <p class="poin"></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-lg-12 mainCol">
                         <div class="row">
@@ -93,10 +119,10 @@
                                     <tbody>
                                 </table>
                                 <div class="row answer">
-                                    <div class="col-lg-4">
-                                        <p>KETIK JAWABAN KAMU<br>DAN TEKAN ENTER</p>
+                                    <div class="col-lg-4 col-3">
+                                        <p>KETIK<br>DAN TEKAN ENTER</p>
                                     </div>
-                                    <div class="col-lg-8">
+                                    <div class="col-lg-8 col-9">
                                         <input class="player" style="text-transform: uppercase;" type="text" name=""
                                             id="">
                                     </div>
