--- a/famili-100/index.html
+++ b/famili-100/index.html
@@ -21,42 +21,38 @@
         <div class="optionMenu show">
             <div class="container mainCol">
                 <div class="row">
-                    <div class="col-lg-12">
-                        <div class="row optionRow">
-                            <div class="col-lg-4 text-center">
-                                <a href="javascript:void(0)" id="easy" class="option">
-                                    <p>EASY</p>
-                                </a>
-                            </div>
-                            <div class="col-lg-4 text-center">
-                                <a href="javascript:void(0)" id="medium" class="option">
-                                    <p>MEDIUM</p>
-                                </a>
-                            </div>
-                            <div class="col-lg-4 text-center">
-                                <a href="javascript:void(0)" id="hard" class="option">
-                                    <p>HARD</p>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-12 playMusic d-flex justify-content-end">
-                                <p>Music</p>
-                                <button type="button" class="btn btn-primary play">
-                                    <svg class="ico-play show" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                        fill="currentColor" class="bi bi-play" viewBox="0 0 16 16">
-                                        <path
-                                            d="M10.804 8 5 4.633v6.734L10.804 8zm.792-.696a.802.802 0 0 1 0 1.392l-6.363 3.692C4.713 12.69 4 12.345 4 11.692V4.308c0-.653.713-.998 1.233-.696l6.363 3.692z">
-                                        </path>
-                                    </svg>
-                                    <svg class="ico-pause" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                        fill="currentColor" class="bi bi-pause" viewBox="0 0 16 16">
-                                        <path
-                                            d="M6 3.5a.5.5 0 0 1 .5.5v8a.5.5 0 0 1-1 0V4a.5.5 0 0 1 .5-.5zm4 0a.5.5 0 0 1 .5.5v8a.5.5 0 0 1-1 0V4a.5.5 0 0 1 .5-.5z" />
-                                    </svg>
-                                </button>
-                            </div>
-                        </div>
+                    <div class="col-lg-4 text-center">
+                        <a href="javascript:void(0)" id="easy" class="option">
+                            <p>EASY</p>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 text-center">
+                        <a href="javascript:void(0)" id="medium" class="option">
+                            <p>MEDIUM</p>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 text-center">
+                        <a href="javascript:void(0)" id="hard" class="option">
+                            <p>HARD</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12 playMusic d-flex justify-content-end">
+                        <p>Music</p>
+                        <button type="button" class="btn btn-primary play">
+                            <svg class="ico-play show" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                fill="currentColor" class="bi bi-play" viewBox="0 0 16 16">
+                                <path
+                                    d="M10.804 8 5 4.633v6.734L10.804 8zm.792-.696a.802.802 0 0 1 0 1.392l-6.363 3.692C4.713 12.69 4 12.345 4 11.692V4.308c0-.653.713-.998 1.233-.696l6.363 3.692z">
+                                </path>
+                            </svg>
+                            <svg class="ico-pause" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                fill="currentColor" class="bi bi-pause" viewBox="0 0 16 16">
+                                <path
+                                    d="M6 3.5a.5.5 0 0 1 .5.5v8a.5.5 0 0 1-1 0V4a.5.5 0 0 1 .5-.5zm4 0a.5.5 0 0 1 .5.5v8a.5.5 0 0 1-1 0V4a.5.5 0 0 1 .5-.5z" />
+                            </svg>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -65,27 +61,23 @@
     <section>
         <div class="main">
             <div class="container">
-                <div class="row sp-show">
-                    <div class="col-12">
-                        <div class="row">
-                            <div class="col-3">
-                                <div class="container">
-                                    <p>NYAWA</p>
-                                    <p class="life"></p>
-                                </div>
-                            </div>
-                            <div class="col-6">
-                                <div class="container timer">
-                                    <p>TIMER</p>
-                                    <p class="content"></p>
-                                </div>
-                            </div>
-                            <div class="col-3">
-                                <div class="container">
-                                    <p>SKOR</p>
-                                    <p class="poin"></p>
-                                </div>
-                            </div>
+                <div class="row sp-show sp-answer">
+                    <div class="col-3">
+                        <div class="container">
+                            <p>NYAWA</p>
+                            <p class="life"></p>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="container timer">
+                            <p>TIMER</p>
+                            <p class="content"></p>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="container">
+                            <p>SKOR</p>
+                            <p class="poin"></p>
                         </div>
                     </div>
                 </div>
