--- a/famili-100/index.html
+++ b/famili-100/index.html
@@ -19,8 +19,8 @@
     <h1>FAMILY 100</h1>
     <section>
         <div class="optionMenu show">
-            <div class="container mainCol">
-                <div class="row">
+            <div class="container">
+                <div class="row mainCol">
                     <div class="col-lg-4 text-center">
                         <a href="javascript:void(0)" id="easy" class="option">
                             <p>EASY</p>
@@ -61,29 +61,9 @@
     <section>
         <div class="main">
             <div class="container">
-                <div class="row sp-show sp-answer">
-                    <div class="col-3">
-                        <div class="container">
-                            <p>NYAWA</p>
-                            <p class="life"></p>
-                        </div>
-                    </div>
-                    <div class="col-6">
-                        <div class="container timer">
-                            <p>TIMER</p>
-                            <p class="content"></p>
-                        </div>
-                    </div>
-                    <div class="col-3">
-                        <div class="container">
-                            <p>SKOR</p>
-                            <p class="poin"></p>
-                        </div>
-                    </div>
-                </div>
                 <div class="row">
-                    <div class="col-lg-12 mainCol">
-                        <div class="row">
+                    <div class="col-lg-12">
+                        <div class="row sp-reverse">
                             <div class="col-lg-9 main-content">
                                 <p class="question text-center"></p>
                                 <table class="demo">
@@ -120,22 +100,24 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-3 sidebar sp-none text-center">
-                                <div class="container timer">
-                                    <p>TIMER</p>
-                                    <p class="content"></p>
-                                </div>
-                                <div class="container">
-                                    <p>HASIL</p>
-                                    <input class="hasil text-center" type="text" disabled>
-                                </div>
-                                <div class="container">
-                                    <p>NYAWA</p>
-                                    <p class="life"></p>
-                                </div>
-                                <div class="container">
-                                    <p>SKOR</p>
-                                    <p class="poin"></p>
+                            <div class="col-lg-3 col-12 sidebar text-center">
+                                <div class="row">
+                                    <div class="col-4 container timer">
+                                        <p>TIMER</p>
+                                        <p class="content"></p>
+                                    </div>
+                                    <div class="sp-none container">
+                                        <p>HASIL</p>
+                                        <input class="hasil text-center" type="text" disabled>
+                                    </div>
+                                    <div class="col-lg-12 col-4 container">
+                                        <p>NYAWA</p>
+                                        <p class="life"></p>
+                                    </div>
+                                    <div class="col-lg-12 col-4 container">
+                                        <p>SKOR</p>
+                                        <p class="poin"></p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -147,8 +129,8 @@
     <section>
         <div class="over">
             <div class="container text-center">
-                <div class="row">
-                    <div class="col-lg-12 mainCol">
+                <div class="row mainCol">
+                    <div class="col-lg-12">
                         <h2>GAME OVER</h2>
                         <p class="message"></p>
                         <button type="button" class="btn btn-warning restart heartbeat">MAIN LAGI?</button>
