--- a/famili-100/index.html
+++ b/famili-100/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <h1>FAMILY 100</h1>
+    <h1><img src="../famili-100/image/logo.png" alt=""></h1>
     <section>
         <div class="optionMenu show">
             <div class="container">
@@ -36,9 +36,7 @@
                             <p>HARD</p>
                         </a>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-12 playMusic d-flex justify-content-end">
+                    <div class="col-lg-12 col-12 playMusic justify-content-end">
                         <p>Music</p>
                         <button type="button" class="btn btn-primary play">
                             <svg class="ico-play show" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
@@ -61,7 +59,7 @@
     <section>
         <div class="main">
             <div class="container">
-                <div class="row">
+                <div class="row mainCol">
                     <div class="col-lg-12">
                         <div class="row sp-reverse">
                             <div class="col-lg-9 main-content">
