--- a/famili-100/index.html
+++ b/famili-100/index.html
@@ -59,7 +59,7 @@
     <section>
         <div class="main">
             <div class="container">
-                <div class="row mainCol">
+                <div class="row">
                     <div class="col-lg-12">
                         <div class="row sp-reverse">
                             <div class="col-lg-9 main-content">
