--- a/Jersey-Store/index.html
+++ b/Jersey-Store/index.html
@@ -26,7 +26,7 @@
 <body>
   <section>
     <div id="UpperNav">
-      <ul class="nav justify-content-end navbar-expand-lg bg-grey">
+      <ul class="nav navbar-expand-lg bg-grey">
         <li class="nav-item flag-icon upperitem">
           <p class="modal-list"><i class="fas fa-map-marker-alt"></i>&nbsp;&nbsp;&nbsp;ID</p>
         </li>
