--- a/Jersey-Store/index.html
+++ b/Jersey-Store/index.html
@@ -218,7 +218,7 @@
                           src="https://static.nike.com/a/images/t_PDP_864_v1/f_auto,b_rgb:f5f5f5,q_80/00f50b7a-099c-4b85-ad87-8b467134ed52/air-jordan-1-mid-shoe-BpARGV.jpg">
                       </a>
                       <ul class="social">
-                        <li><a href="#"><i class="fa fa-shopping-bag"></i></a></li>
+                        <li><a href="#"><i class="fa fa-heart"></i></a></li>
                         <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
                       </ul>
                     </div>
@@ -245,7 +245,7 @@
                           src="https://static.nike.com/a/images/t_PDP_864_v1/f_auto,b_rgb:f5f5f5,q_80/630d81b8-5f07-4736-868f-ffc97dfdd647/air-max-90-shoe-r5WqV3.jpg">
                       </a>
                       <ul class="social">
-                        <li><a href="#"><i class="fa fa-shopping-bag"></i></a></li>
+                        <li><a href="#"><i class="fa fa-heart"></i></a></li>
                         <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
                       </ul>
                     </div>
@@ -274,7 +274,7 @@
                           src="https://static.nike.com/a/images/t_PDP_864_v1/f_auto,b_rgb:f5f5f5,q_80/c12cf736-abdc-447d-9034-ef9a1ba63ef6/air-jordan-1-low-se-shoe-XvqDsj.jpg">
                       </a>
                       <ul class="social">
-                        <li><a href="#"><i class="fa fa-shopping-bag"></i></a></li>
+                        <li><a href="#"><i class="fa fa-heart"></i></a></li>
                         <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
                       </ul>
                       <span class="product-new-label">New</span>
@@ -302,7 +302,7 @@
                           src="https://static.nike.com/a/images/t_PDP_864_v1/f_auto,b_rgb:f5f5f5,q_80/hwo4wriixcrxswfocrea/air-max2-light-shoe-rWm3CX.jpg">
                       </a>
                       <ul class="social">
-                        <li><a href="#"><i class="fa fa-shopping-bag"></i></a></li>
+                        <li><a href="#"><i class="fa fa-heart"></i></a></li>
                         <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
                       </ul>
                     </div>
