--- a/Jersey-Store/index.html
+++ b/Jersey-Store/index.html
@@ -332,16 +332,16 @@
       <h2 class="mt100 text-center" style="font-family: 'Anton', sans-serif;">OFFICIAL PRODUCT BY</h2>
       <div class="container mt50">
         <div class="row">
-          <div class="sponsor col-lg-3 col-md-6 col-sm-12 mt-2">
+          <div class="sponsor col-lg-3 col-md-6 col-6 mt-2">
             <img src="http://pngimg.com/uploads/nike/nike_PNG11.png" , class="slide-fwd-center sponsor img-fluid ">
           </div>
-          <div class="col-lg-3 col-md-6 col-sm-12 mt-2">
+          <div class="col-lg-3 col-md-6 col-6 mt-2">
             <img src="http://pngimg.com/uploads/adidas/adidas_PNG8.png" , class="sponsor img-fluid ">
           </div>
-          <div class="col-lg-3 col-md-6 col-sm-12 mt-2">
+          <div class="col-lg-3 col-md-6 col-6 mt-2">
             <img src="https://www.stickpng.com/assets/images/580b57fcd9996e24bc43c4f8.png" , class="sponsor img-fluid">
           </div>
-          <div class="col-lg-3 col-md-6 col-sm-12 mt-2">
+          <div class="col-lg-3 col-md-6 col-6 mt-2">
             <img src="https://cdn.freebiesupply.com/logos/large/2x/umbro-logo-png-transparent.png" ,
               class="sponsor img-fluid">
           </div>
