--- a/Jersey-Store/katalog.html
+++ b/Jersey-Store/katalog.html
@@ -49,7 +49,7 @@
     <div>
         <div class="row">
             <!-- START SIDEBAR -->
-            <div class="col-lg-2 col-md-3">
+            <div class="col-lg-2 col-md-3 sp-none">
                 <div class="panel-group sticky-top-stack" id="accordion">
                     <div class="panel panel-default">
                         <div class="panel-heading accordionCapt">
