--- a/Jersey-Store/katalog.html
+++ b/Jersey-Store/katalog.html
@@ -127,7 +127,8 @@
         <div class="container">
             <div class="row">
                 <!-- START SIDEBAR -->
-                <section id="sidebar"></section>
+                <div id="sidebar">
+                </div>
                 <!-- END SIDEBAR -->
 
                 <div class="col-lg-10 col-md-9 col-12">
