--- a/Jersey-Store/index.html
+++ b/Jersey-Store/index.html
@@ -20,6 +20,7 @@
   <link href="https://fonts.googleapis.com/css?family=Norican&display=swap" rel="stylesheet">
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <script type="module" src='https://unpkg.com/html-include-element'></script>
   <title>Jersey Store - Toko Online Jersey Original Terlengkap</title>
 </head>
 
@@ -97,7 +98,8 @@
     <!-- END MODAL -->
   </section>
 
-  <header class="sticky-top" id="header">
+  <header class="sticky-top" id="header"> 
+    <html-include src="./component/header.html"></html-include>
   </header>
 
   <section id="content">
