--- a/Jersey-Store/index.html
+++ b/Jersey-Store/index.html
@@ -99,7 +99,7 @@
   </section>
 
   <header class="sticky-top" id="header"> 
-    <html-include src="./component/header.html"></html-include>
+    <!--#include virtual="/component/header.shtml" -->
   </header>
 
   <section id="content">
