--- a/Jersey-Store/index.html
+++ b/Jersey-Store/index.html
@@ -98,6 +98,7 @@
   </section>
 
   <header class="sticky-top" id="header">
+    	<!--#include virtual="/component/header.shtml" -->
   </header>
 
   <section id="content">
@@ -313,8 +314,7 @@
     </section>
   </section>
 
-  <footer>
-  </footer>
+  <footer><!--#include virtual="/component/footer.shtml" --></footer>
 </body>
 
 
