--- a/Jersey-Store/index.html
+++ b/Jersey-Store/index.html
@@ -303,7 +303,7 @@
             <img src="http://pngimg.com/uploads/adidas/adidas_PNG8.png" , class="sponsor img-fluid ">
           </div>
           <div class="col-lg-3 col-md-6 col-6 mt-2">
-            <img src="https://www.stickpng.com/assets/images/580b57fcd9996e24bc43c4f8.png" , class="sponsor img-fluid">
+            <img src="https://www.freepnglogos.com/uploads/puma-logo-png-1.png" , class="sponsor img-fluid">
           </div>
           <div class="col-lg-3 col-md-6 col-6 mt-2">
             <img src="https://cdn.freebiesupply.com/logos/large/2x/umbro-logo-png-transparent.png" ,
