--- a/Jersey-Store/index.html
+++ b/Jersey-Store/index.html
@@ -98,7 +98,7 @@
   </section>
 
   <header class="sticky-top" id="header">
-    	<!--#include virtual="/component/header.shtml" -->
+    <!--#include virtual="/component/header.shtml" -->
   </header>
 
   <section id="content">
@@ -116,45 +116,53 @@
     <h2 align="center" style="font-family: 'Anton', sans-serif;">CATEGORIES</h2>
     <div class="container">
       <div class="row text-center">
-        <div class="col-lg-4 col-md-6 col-sm-12 mt-2 " align="center">
-          <div class="carousel-item card fadeIn active" style="width: 18rem;">
-            <img class="card-img-top img-fluid" src="" alt="Men's Jersey">
-            <div class="card-body">
-              <h5 class="card-title" style="font-family: 'Anton', sans-serif;">Men's Jersey</h5>
-              <p class="card-text">Jersey yang di peruntukan untuk Pria dengan fitur fitur yang terbaru</p>
-            </div>
-            <div class="card-body">
-              <a href="file:///D:/WEBHOZZ/PROJECT WEBSITE/katalog.html" target="_blank"><button type="button"
-                  class="btn btn-dark">Take Me There</button></a>
-            </div>
+        <div class="col-lg-2 col-md-6 col-6 mt-2" align="center">
+          <div class="cat-content myfilter">
+            <img src="https://img.uefa.com/imgml/TP/players/1/2023/324x324/250084709.jpg" alt="">
+            <p class="caption">MEN</p>
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 col-sm-12 mt-2 " align="center">
-          <div class="card fadeIn" style="width: 18rem;">
-            <img class="card-img-top img-fluid" src="" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title" style="font-family: 'Anton', sans-serif;">Women's Sporty Cloth</h5>
-              <p class="card-text">Jersey yang diperuntukkan dan sudah di sesuaikan untuk Wanita</p>
-            </div>
-            <div class="card-body">
-              <a href="file:///D:/WEBHOZZ/PROJECT WEBSITE/katalog.html" target="_blank"><button type="button"
-                  class="btn btn-dark">Take Me There</button></a>
-            </div>
+        <div class="col-lg-2 col-md-6 col-6 mt-2" align="center">
+          <div class="cat-content myfilter">
+            <img src="https://img.uefa.com/imgml/TP/players/39/2023/324x324/1907368.jpg" alt="">
+            <p class="caption">WOMEN</p>
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 col-sm-12 fade-in mt-2" align="center">
-          <div class="card fadeIn" style="width: 18rem;">
-            <img class="card-img-top img-fluid fade-in" src="" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title" style="font-family: 'Anton', sans-serif;">Sportswear</h5>
-              <p class="card-text">Temukan segala jenis peralatan untuk aktifitas olahraga kamu</p>
-            </div>
-            <div class="card-body">
-              <a href="file:///D:/WEBHOZZ/PROJECT WEBSITE/katalog.html" target="_blank"><button type="button"
-                  class="btn btn-dark">Take Me There</button></a>
-            </div>
+        <div class="col-lg-2 col-md-6 col-6 mt-2" align="center">
+          <div class="cat-content myfilter">
+            <img
+              src="https://assets.adidas.com/images/h_840,f_auto,q_auto,fl_lossy,c_fill,g_auto/6de5e6a6913c4b84bac2aeeb0131ba70_9366/Camo_Allover_Print_Pullover_Hoodie_Blue_GA8001_41_detail.jpg"
+              alt="">
+            <p class="caption">KIDS</p>
+          </div>
+        </div>
+
+        <div class="col-lg-2 col-md-6 col-6 mt-2" align="center">
+          <div class="cat-content myfilter">
+            <img
+              src="https://assets.adidas.com/images/h_840,f_auto,q_auto,fl_lossy,c_fill,g_auto/ddd2cc87495145a78947ae4a00fa85bc_9366/Studio_Lounge_Fleece_Hoodie_Beige_HC5881_41_detail.jpg"
+              alt="">
+            <p class="caption">HOODIES</p>
+          </div>
+        </div>
+
+        <div class="col-lg-2 col-md-6 col-6 mt-2" align="center">
+          <div class="cat-content myfilter">
+            <img
+              src="https://assets.adidas.com/images/h_840,f_auto,q_auto,fl_lossy,c_fill,g_auto/bb21eb8a74e64fe09338aed300ce75ad_9366/Samba_OG_Shoes_Orange_HP7898_01_standard.jpg"
+              alt="">
+            <p class="caption">SHOES</p>
+          </div>
+        </div>
+
+        <div class="col-lg-2 col-md-6 col-6 mt-2" align="center">
+          <div class="cat-content myfilter">
+            <img
+              src="https://assets.adidas.com/images/h_840,f_auto,q_auto,fl_lossy,c_fill,g_auto/4e9f4bf4ae664b0798d4ae6201337d82_9366/Al_Rihla_League_Ball_White_H57791_01_standard.jpg"
+              alt="">
+            <p class="caption">GEAR</p>
           </div>
         </div>
       </div>
@@ -314,7 +322,9 @@
     </section>
   </section>
 
-  <footer><!--#include virtual="/component/footer.shtml" --></footer>
+  <footer>
+    <!--#include virtual="/component/footer.shtml" -->
+  </footer>
 </body>
 
 
